modified layout of projects page

--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -12,7 +12,7 @@
         display: flex
         flex-direction: row
         &__image
-            width: 41vw
+            min-width: 34vw
             height: 80vh
             margin-top: 3%
             margin-left: 2%
