--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -7,8 +7,11 @@
     justify-content: space-around
     align-items: center
     background-color: steelblue
-    font-size: 175%
     font-weight: bold
+    @media only screen and (max-width: 1023px)
+        font-size: 100%
+    @media only screen and (min-width: 1024px)
+        font-size: 175%
     .nav-menu
         &__item
             font-family: 'Baloo Bhai'
@@ -23,3 +26,7 @@
             height: 9.5vh
             display: flex
             justify-content: flex-start
+            @media only screen and (max-width: 1023px)
+                max-width: 16vw
+            @media only screen and (min-width: 1024px)
+                max-width: 8vw
