--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -1,32 +1,52 @@
 .home-page
+    width: 100vw
+    height: 100vh
     .myName
         position: relative
         top: 11vh
-        width: 100%
-        height: 59vh
+        width: 100vw
         display: flex
         justify-content: space-evenly
         background: whitesmoke
-        // background: radial-gradient(#3690ff94, transparent)
         align-items: center
+        @media only screen and (max-width: 1023px)
+            height: 75vh
+            flex-direction: column
+        @media only screen and (min-width: 1024px)
+            height: 63vh
         .background
-            width: 25%
             display: flex
-            justify-content: flex-start
             height: 100%
+            width: 30%
+            @media only screen and (max-width: 1023px)
+                width: 100%
             &__profile-photo
-                height: 59vh
-                margin-left: 15%
+                @media only screen and (max-width: 1023px)
+                    height: 40vh
+                    margin-top: 3%
+                    width: 60%
+                    margin-left: 20%
+                @media only screen and (min-width: 1024px)
+                    height: 63vh
+                    margin-left: 15%
+                    width: 90%
+
         .titles
             display: flex
             flex-wrap: wrap
             justify-content: center
             align-self: center
+            width: 70%
+            @media only screen and (max-width: 1023px)
+                width: 100%
+                margin-bottom: 10%
             h4
                 font-size: 200%
                 display: flex
                 justify-content: center
                 align-self: center
+                @media only screen and (max-width: 1023px)
+                    font-size: 130%
             h5
                 font-size: 110%
                 display: flex
@@ -34,6 +54,10 @@
                 align-self: center
                 width: 100%
                 margin-top: 2%
+                @media only screen and (max-width: 1023px)
+                    font-size: 80%
+                    margin: 3%
+                    text-align: center
 
             &__button
                 width: 35vh
@@ -43,34 +67,46 @@
                 background: steelblue
                 margin-top: 4%
                 font-size: 120%
+                @media only screen and (max-width: 1023px)
+                    margin-top: 1%
                 &:hover
                     cursor: pointer
                     background: #3690ff94
                     color: black
                     transform: scale(1.2) perspective(1px)
     h2
-        font-size: 500%
         display: flex
         justify-content: center
         width: 100%
         font-family: 'Baloo Bhai'
+        @media only screen and (max-width: 1023px)
+            font-size: 200%
+        @media only screen and (min-width: 1024px)
+            font-size: 500%
+
     h3
-        font-size: 180%
         display: flex
         justify-content: center
         align-self: center
         width: 100%
-        margin-top: 3%
+        margin-top: 2%
+        @media only screen and (max-width: 1023px)
+            font-size: 120%
+        @media only screen and (min-width: 1024px)
+            font-size: 180%
 
     .contact
-        height: 30vh
         display: flex
         flex-direction: column
         justify-content: space-evenly
         background: lightskyblue
-        // background: linear-gradient(2deg, #3690ff94, transparent)
         position: relative
-        top: 11vh
+        @media only screen and (max-width: 1023px)
+            height: 15vh
+            top: 10vh
+        @media only screen and (min-width: 1024px)
+            height: 26vh
+            top: 11vh
         .socialmedia
             width: 60%
             padding: 1%
