--- a/my-website-app/src/components/SkyBeer/index.sass
+++ b/my-website-app/src/components/SkyBeer/index.sass
@@ -1,12 +1,21 @@
 .skybeer
-    position: absolute
-    display: flex
-    flex-direction: column
-    top: 11vh
-    left: 17vw
-    width: 80vw
-    height: 89vh
-    padding: 1%
+    @media only screen and (max-width: 1023px)
+        position: absolute
+        display: flex
+        flex-direction: column
+        top: 19vh
+        width: 100vw
+        height: 80%
+        padding: 3%
+    @media only screen and (min-width: 1024px)
+        position: absolute
+        display: flex
+        flex-direction: column
+        top: 11vh
+        left: 17vw
+        width: 80vw
+        height: 88vh
+        padding: 1%
     .box
         display: flex
         flex-direction: column
@@ -14,33 +23,65 @@
         width: 100%
         align-self: center
         .images
-            display: flex
-            flex-direction: row
-            justify-content: space-evenly
-            align-self: center
-            height: 65%
-            width: 100%
-            border-bottom: solid 1px
-            &__image
-                width: 13vw
-                height: 44vh
+            @media only screen and (max-width: 1023px)
+                display: flex
+                flex-direction: row
+                justify-content: space-evenly
                 align-self: center
-                margin-bottom: 2%
+                height: 40%
+                width: 100%
+                border-bottom: solid 1px
+            @media only screen and (min-width: 1024px)
+                display: flex
+                flex-direction: row
+                justify-content: space-evenly
+                align-self: center
+                height: 65%
+                width: 100%
+                border-bottom: solid 1px
+            &__image
+                @media only screen and (max-width: 1023px)
+                    width: 19vw
+                    height: 23vh
+                    align-self: center
+                    margin-bottom: 2%
+                @media only screen and (min-width: 1024px)
+                    width: 13vw
+                    height: 44vh
+                    align-self: center
+                    margin-bottom: 2%
         &__text
             margin-top: 2%
         &__project-info
-            width: 100%
-            height: 40%
-            padding: 1%
-            display: flex
-            justify-content: flex-start
-            flex-direction: column
-            align-self: center
-            margin-top: 1%
-            letter-spacing: 1px
-            line-height: 22px
-            font-size: 80%
-            h3
+            @media only screen and (max-width: 1023px)
+                width: 100%
+                height: 40%
+                padding: 1%
+                display: flex
+                justify-content: flex-start
+                flex-direction: column
+                align-self: center
                 margin-top: 0.5%
-                font-size: 120%
-                font-family: 'Baloo Bhai'
+                line-height: 17px
+                font-size: 70%
+            @media only screen and (min-width: 1024px)
+                width: 100%
+                height: 40%
+                padding: 1%
+                display: flex
+                justify-content: center
+                flex-direction: column
+                align-self: center
+                margin-top: 0.5%
+                letter-spacing: 1px
+                line-height: 22px
+                font-size: 80%
+            h3
+                @media only screen and (max-width: 1023px)
+                    margin-top: 3.5%
+                    font-size: 160%
+                    font-family: 'Baloo Bhai'
+                @media only screen and (min-width: 1024px)
+                    margin-top: 0.5%
+                    font-size: 120%
+                    font-family: 'Baloo Bhai'
