--- a/my-website-app/src/components/Gnomes-react/index.sass
+++ b/my-website-app/src/components/Gnomes-react/index.sass
@@ -1,4 +1,4 @@
-.personal-website
+.gnomes-react
     @media only screen and (max-width: 1023px)
         position: absolute
         display: flex
@@ -26,6 +26,7 @@
             @media only screen and (max-width: 1023px)
                 display: flex
                 flex-direction: row
+                flex-wrap: wrap
                 justify-content: space-evenly
                 align-self: center
                 height: 40%
@@ -36,20 +37,18 @@
                 flex-direction: row
                 justify-content: space-evenly
                 align-self: center
-                height: 65%
+                height: 45%
                 width: 100%
                 border-bottom: solid 1px
             &__image
                 @media only screen and (max-width: 1023px)
-                    width: 19vw
+                    width: 40vw
                     height: 23vh
                     align-self: center
-                    margin-bottom: 2%
                 @media only screen and (min-width: 1024px)
-                    width: 13vw
-                    height: 44vh
+                    width: 16vw
+                    height: 34vh
                     align-self: center
-                    margin-bottom: 2%
         &__text
             margin-top: 2%
         &__project-info
@@ -85,6 +84,7 @@
                     margin-top: 0.5%
                     font-size: 120%
                     font-family: 'Baloo Bhai'
+                    
         &__direct-access
             @media only screen and (max-width: 1023px)
                 width: 100%
