--- a/my-website-app/src/components/SkyBeer/index.sass
+++ b/my-website-app/src/components/SkyBeer/index.sass
@@ -3,10 +3,10 @@
         position: absolute
         display: flex
         flex-direction: column
-        top: 19vh
+        top: 42vh
         width: 100vw
-        height: 80%
         padding: 3%
+        margin-top: 2%
     @media only screen and (min-width: 1024px)
         position: absolute
         display: flex
@@ -85,3 +85,36 @@
                     margin-top: 0.5%
                     font-size: 120%
                     font-family: 'Baloo Bhai'
+        &__direct-access
+            @media only screen and (max-width: 1023px)
+                width: 100%
+                height: 3rem
+                display: flex
+                flex-direction: row
+                align-items: center
+            @media only screen and (min-width: 1024px)
+                width: 100%
+                height: 3rem
+                display: flex
+                flex-direction: row
+                align-items: center
+                p 
+                    @media only screen and (max-width: 1023px)
+                        width: 42%
+                    @media only screen and (min-width: 1024px)
+                        width: 20%
+        &__container
+            width: 10%    
+        &__icon
+            max-width: 10vw
+            max-height: 12vh
+            margin: 0.5%
+            @media only screen and (max-width: 1023px)
+                width: 60%
+                margin-left: 20%
+            @media only screen and (min-width: 1024px)
+                width: 30%  
+                margin-left: -20%
+            &:hover
+                cursor: pointer
+                transform: scale(1.3) perspective(1px)
