--- a/my-website-app/src/components/Gnomes-react/index.sass
+++ b/my-website-app/src/components/Gnomes-react/index.sass
@@ -104,7 +104,8 @@
                     @media only screen and (min-width: 1024px)
                         width: 20%
         &__container
-            width: 10%    
+            width: 10% 
+            margin-left: 3%   
         &__icon
             max-width: 10vw
             max-height: 12vh
@@ -113,7 +114,7 @@
                 width: 60%
                 margin-left: 20%
             @media only screen and (min-width: 1024px)
-                width: 30%  
+                width: 30%
                 margin-left: -20%
             &:hover
                 cursor: pointer
