--- a/my-website-app/src/components/Time2Padel/index.sass
+++ b/my-website-app/src/components/Time2Padel/index.sass
@@ -106,6 +106,7 @@
                         width: 20%
         &__container
             width: 10%    
+            margin-left: 3% 
         &__icon
             max-width: 10vw
             max-height: 12vh
