projects compo modified to give a new face to the view

--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -4,8 +4,6 @@
 .about-me
     position: relative
     top: 11vh
-    height: 89vh
-    background: whitesmoke
     .welcome
         width: 100vw
         display: flex
@@ -21,21 +19,20 @@
             @media only screen and (max-width: 1023px)
                 height: 200px
                 width: 200px
-                margin-top: 3%
-                border: 1px solid
+                margin-top: 5%
                 object-fit: contain
-                border-radius: 50%
+
             @media only screen and (min-width: 1024px)
                 min-width: 34vw
-                height: 80vh
+                height: 80%
                 margin-top: 3%
                 margin-left: 2%
-
+                border-radius: 2rem
         .info
             width: 100%
             padding: 3%
-            align-self: center
-            height: 95%
+            align-self: flex-start
+            height: 75%
             &__title
                 @media only screen and (max-width: 1023px)
                     font-size: 130%
