--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -8,36 +8,138 @@
         left: 2vw
         z-index: 100
         width: 95vw
-        height: 30vh
+        height: 87%
         justify-content: space-around
         align-items: center
         background-color: skyblue
         font-size: 175%
         font-weight: bold
-        border: 2px solid steelblue
     @media only screen and (min-width: 1024px)
         position: absolute
         overflow: auto
-        top: 13vh
+        top: 11.5vh
         left: 2vw
         z-index: 100
-        width: 12%
-        height: 92vh
+        width: 95%
+        height: 88%
         display: flex
         flex-direction: column
         justify-content: space-around
         align-items: center
-        background-color: skyblue
         font-size: 175%
         font-weight: bold
-        border: 2px solid steelblue
     .nav-menu
-        &__item
+        height: 20vh
+        width: 90vw
+        background-color: #e5eaf0
+        border: 2px solid steelblue
+        cursor: pointer
+        &__item-container1
+            height: 15vh
+            width: 90vw
+            border: 3px solid black
+            cursor: pointer
+            background: url("/img/time2padel-bg.jpg")
+            background-repeat: no-repeat
+            background-size: cover
+        &__item1
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            -webkit-text-stroke: 2px black
+            color: #f4e32d
             font-family: 'Baloo Bhai'
-            font-size: 60%
+            font-size: 200%
             text-decoration: none
-            color: steelblue
             &:hover
                 cursor: pointer
-                color: whitesmoke
+                transform: scale(1.1) perspective(1px)
+
+        &__item-container2
+            height: 15vh
+            width: 90vw
+            border: 3px solid black
+            cursor: pointer
+            background: url("/img/beer-bg.jpg")
+            background-repeat: no-repeat
+            background-size: cover
+        &__item2
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            -webkit-text-stroke: 2px black
+            color: #eca114
+            font-family: 'Baloo Bhai'
+            font-size: 200%
+            text-decoration: none
+            &:hover
+                cursor: pointer
+                transform: scale(1.1) perspective(1px)
+
+        &__item-container3
+            height: 15vh
+            width: 90vw
+            border: 3px solid black
+            cursor: pointer
+            background: url("/img/portfolio-bg.jpg")
+            background-repeat: no-repeat
+            background-size: cover
+        &__item3
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            -webkit-text-stroke: 2px black
+            color: #1f77b9
+            font-family: 'Baloo Bhai'
+            font-size: 200%
+            text-decoration: none
+            &:hover
+                cursor: pointer
+                transform: scale(1.1) perspective(1px)
+
+        &__item-container4
+            height: 15vh
+            width: 90vw
+            border: 3px solid black
+            cursor: pointer
+            background: url("/img/gnomeworld-bg.png")
+            background-repeat: no-repeat
+            background-size: cover
+        &__item4
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            -webkit-text-stroke: 2px black
+            color: #1ee9f0
+            font-family: 'Baloo Bhai'
+            font-size: 200%
+            text-decoration: none
+            &:hover
+                cursor: pointer
+                transform: scale(1.1) perspective(1px)
+
+        &__item-container5
+            height: 15vh
+            width: 90vw
+            border: 3px solid black
+            cursor: pointer
+            background: url("/img/gnomeworld-bg.png")
+            background-repeat: no-repeat
+            background-size: cover
+        &__item5
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            -webkit-text-stroke: 2px black
+            color: #aa0294
+            font-family: 'Baloo Bhai'
+            font-size: 200%
+            text-decoration: none
+            &:hover
+                cursor: pointer
                 transform: scale(1.1) perspective(1px)
