--- a/my-website-app/src/components/Time2Padel/index.sass
+++ b/my-website-app/src/components/Time2Padel/index.sass
@@ -11,9 +11,10 @@
         position: absolute
         display: flex
         flex-direction: column
+        align-content: center
         top: 11vh
-        left: 17vw
-        width: 80vw
+        left: 5vw
+        width: 90vw
         height: 88vh
         padding: 1%
     .box
@@ -66,7 +67,7 @@
                 font-size: 70%
             @media only screen and (min-width: 1024px)
                 width: 100%
-                height: 60%
+                height: 45%
                 padding: 1%
                 display: flex
                 justify-content: center
