projects layout modified for mobile version

--- a/my-website-app/src/components/Personal-website/index.sass
+++ b/my-website-app/src/components/Personal-website/index.sass
@@ -3,8 +3,9 @@
         position: absolute
         display: flex
         flex-direction: column
-        top: 42vh
+        top: 5vh
         width: 100vw
+        height: 100vh
         padding: 3%
         margin-top: 2%
     @media only screen and (min-width: 1024px)
