--- a/my-website-app/src/components/Gnomes-react/index.sass
+++ b/my-website-app/src/components/Gnomes-react/index.sass
@@ -3,8 +3,9 @@
         position: absolute
         display: flex
         flex-direction: column
-        top: 42vh
+        top: 10vh
         width: 100vw
+        height: 100vh
         padding: 3%
         margin-top: 2%
     @media only screen and (min-width: 1024px)
@@ -29,7 +30,7 @@
                 flex-wrap: wrap
                 justify-content: space-evenly
                 align-self: center
-                height: 40%
+                height: 50%
                 width: 100%
                 border-bottom: solid 1px
             @media only screen and (min-width: 1024px)
