--- a/my-website-app/src/components/Adevinta-vanilla/index.sass
+++ b/my-website-app/src/components/Adevinta-vanilla/index.sass
@@ -1,4 +1,4 @@
-.gnomes-react
+.adevinta
     @media only screen and (max-width: 1023px)
         position: absolute
         display: flex
@@ -11,6 +11,7 @@
         position: absolute
         display: flex
         flex-direction: column
+        align-content: center
         top: 11vh
         left: 5vw
         width: 90vw
@@ -26,10 +27,9 @@
             @media only screen and (max-width: 1023px)
                 display: flex
                 flex-direction: row
-                flex-wrap: wrap
                 justify-content: space-evenly
                 align-self: center
-                height: 50%
+                height: 40%
                 width: 100%
                 border-bottom: solid 1px
             @media only screen and (min-width: 1024px)
@@ -37,18 +37,20 @@
                 flex-direction: row
                 justify-content: space-evenly
                 align-self: center
-                height: 45%
+                height: 65%
                 width: 100%
                 border-bottom: solid 1px
             &__image
                 @media only screen and (max-width: 1023px)
-                    width: 40vw
+                    width: 19vw
                     height: 23vh
                     align-self: center
+                    margin-bottom: 2%
                 @media only screen and (min-width: 1024px)
-                    width: 16vw
-                    height: 34vh
+                    width: 13vw
+                    height: 44vh
                     align-self: center
+                    margin-bottom: 2%
         &__text
             margin-top: 2%
         &__project-info
@@ -84,7 +86,7 @@
                     margin-top: 0.5%
                     font-size: 120%
                     font-family: 'Baloo Bhai'
-                    
+
         &__direct-access
             @media only screen and (max-width: 1023px)
                 width: 100%
@@ -104,8 +106,8 @@
                     @media only screen and (min-width: 1024px)
                         width: 20%
         &__container
-            width: 10% 
-            margin-left: 3%   
+            width: 10%    
+            margin-left: 3% 
         &__icon
             max-width: 10vw
             max-height: 12vh
@@ -114,7 +116,7 @@
                 width: 60%
                 margin-left: 20%
             @media only screen and (min-width: 1024px)
-                width: 30%
+                width: 30%  
                 margin-left: -20%
             &:hover
                 cursor: pointer
