--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -1,12 +1,12 @@
 .nav
-    position: absolute
-    z-index: 10
+    position: fixed
+    z-index: 1000
     width: 100%
-    height: 11vh
+    height: 13vh
     display: flex
     justify-content: space-around
     align-items: center
-    background-color: steelblue
+    background-color: dodgerblue
     font-weight: bold
     @media only screen and (max-width: 1023px)
         font-size: 100%
@@ -15,18 +15,45 @@
     .nav-menu
         &__item
             font-family: 'Baloo Bhai'
-            font-size: 110%
-            color: lightskyblue
+            font-size: 80%
+            color: whitesmoke
+            margin-left: 3%
+            @media only screen and (min-width: 1024px)
+                font-size: 100%
+                margin-left: 5%
             &:hover
                 cursor: pointer
-                color: whitesmoke
                 transform: scale(1.1) perspective(1px)
-        &__logo
+        // &__logo
+        //     max-width: 8vw
+        //     height: 9.5vh
+        //     display: flex
+        //     justify-content: flex-start
+        //     @media only screen and (max-width: 1023px)
+        //         max-width: 16vw
+        //     @media only screen and (min-width: 1024px)
+        //         max-width: 8vw
+
+.socialmedia
+    width: 35%
+    padding: 1%
+    align-self: center
+    display: flex
+    justify-content: space-evenly
+    @media only screen and (max-width: 1023px)
+        width: 33%
+    &__info
+        height: 50%
+        display: flex
+        flex-direction: column
+        justify-content: center
+    &__icon
+        max-width: 7vw
+        max-height: 8vh
+        margin: 0.5%
+        @media only screen and (max-width: 1023px)
             max-width: 8vw
-            height: 9.5vh
-            display: flex
-            justify-content: flex-start
-            @media only screen and (max-width: 1023px)
-                max-width: 16vw
-            @media only screen and (min-width: 1024px)
-                max-width: 8vw
+            max-height: 8vh
+        &:hover
+            cursor: pointer
+            transform: scale(1.1) perspective(1px)
