--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -3,97 +3,96 @@
     height: 100vh
     .myName
         position: relative
-        top: 11vh
+        top: 13vh
         width: 100vw
         display: flex
         justify-content: space-evenly
-        background: whitesmoke
-        align-items: center
         @media only screen and (max-width: 1023px)
-            height: 75vh
+            height: 87%
             flex-direction: column
+            background: url(/img/main-bg.jpg)
+            background-repeat: no-repeat
+            background-size: cover
+            background-position-y: top
+            background-position-x: right
+            align-items: center
         @media only screen and (min-width: 1024px)
-            height: 63vh
-        .background
+            height: 87%
+            background: url("/img/main-bg.jpg")
+            background-repeat: no-repeat
+            background-size: cover
+            align-items: center
+        .container
             display: flex
+            width: 90%
             height: 100%
-            width: 30%
-            @media only screen and (max-width: 1023px)
-                width: 100%
-            &__profile-photo
-                @media only screen and (max-width: 1023px)
-                    height: 40vh
-                    margin-top: 3%
-                    width: 60%
-                    margin-left: 20%
-                @media only screen and (min-width: 1024px)
-                    height: 63vh
-                    margin-left: 15%
-                    width: 90%
-
-        .titles
-            display: flex
-            flex-wrap: wrap
-            justify-content: center
-            align-self: center
-            width: 70%
-            @media only screen and (max-width: 1023px)
-                width: 100%
-                margin-bottom: 10%
-            h4
-                font-size: 200%
+            .titles
                 display: flex
-                justify-content: center
+                flex-wrap: wrap
+                justify-content: flex-start
                 align-self: center
+                width: 70%
+                height: 40%
                 @media only screen and (max-width: 1023px)
-                    font-size: 130%
-            h5
-                font-size: 110%
-                display: flex
-                justify-content: center
-                align-self: center
-                width: 100%
-                margin-top: 2%
-                @media only screen and (max-width: 1023px)
-                    font-size: 80%
-                    margin: 3%
-                    text-align: center
+                    width: 100%
+                    margin-bottom: 10%
+                    justify-content: center
+                    margin-top: 5%
+                    border: solid 1px
+                    border-radius: 2rem
+                    height: 45%
+                    background-color: whitesmoke
+                h4
+                    font-size: 200%
+                    display: flex
+                    justify-content: flex-start
+                    align-self: center
+                    @media only screen and (max-width: 1023px)
+                        font-size: 130%
+                        justify-content: center
+                h5
+                    font-size: 110%
+                    display: flex
+                    justify-content: flex-start
+                    align-self: center
+                    width: 80%
+                    margin-top: 2%
+                    @media only screen and (max-width: 1023px)
+                        font-size: 80%
+                        margin: 3%
+                        text-align: center
+                        width: 100%
+                        justify-content: center
 
-            &__button
-                width: 35vh
-                height: 8vh
-                border: 2px solid
-                border-radius: 6rem
-                background: steelblue
-                margin-top: 4%
-                font-size: 120%
-                @media only screen and (max-width: 1023px)
-                    margin-top: 1%
-                &:hover
-                    cursor: pointer
-                    background: #3690ff94
-                    color: black
-                    transform: scale(1.2) perspective(1px)
+                &__button
+                    width: 30%
+                    height: 8vh
+                    background: dodgerblue
+                    margin-top: 4%
+                    font-size: 120%
+                    border-radius: 1rem
+                    border: solid 1px #005c99
+                    color: whitesmoke
+                    @media only screen and (max-width: 1023px)
+                        margin-top: 1%
+                        width: 60%
+                        font-size: 90%
+                        border-radius: 1rem
+                    &:hover
+                        cursor: pointer
+                        transform: scale(1.1) perspective(1px)
     h2
         display: flex
-        justify-content: center
+        justify-content: flex-start
         width: 100%
         font-family: 'Baloo Bhai'
+        color: dodgerblue
         @media only screen and (max-width: 1023px)
             font-size: 200%
+            justify-content: center
+            margin-top: 3%
         @media only screen and (min-width: 1024px)
             font-size: 500%
-
-    h3
-        display: flex
-        justify-content: center
-        align-self: center
-        width: 100%
-        margin-top: 2%
-        @media only screen and (max-width: 1023px)
-            font-size: 120%
-        @media only screen and (min-width: 1024px)
-            font-size: 180%
 
     .contact
         display: flex
@@ -105,72 +104,10 @@
             height: 15vh
             top: 10vh
         @media only screen and (min-width: 1024px)
-            height: 26vh
-            top: 11vh
-        .socialmedia
-            width: 60%
-            padding: 1%
-            align-self: center
+            height: 15vh
+            top: 10vh
+        &__box
             display: flex
+            flex-direction: row
             justify-content: space-evenly
-            margin-top: 3%
-            &__info
-                height: 50%
-                display: flex
-                flex-direction: column
-                justify-content: center
-            &__icon
-                max-width: 10vw
-                max-height: 12vh
-                margin: 0.5%
-                &:hover
-                    cursor: pointer
-                    transform: scale(1.3) perspective(1px)
-
-        .email-phone
-            width: 70%
-            padding: 1%
-            align-self: center
-            &__intro
-                font-size: 200%
-                display: flex
-                justify-content: center
-                width: 100%
-                margin-bottom: 3%
-            .box
-                display: flex
-                flex-direction: row
-                justify-content: space-around
-                .email
-                    padding: 1%
-                    width: 35%
-                    display: flex
-                    justify-content: space-around
-                    &__icon
-                        max-width: 7vw
-                        max-height: 12vh
-                        margin: 0.5%
-                    p
-                        width: 40%
-                        align-self: center
-                        font-size: 120%
-
-                .phone
-                    padding: 1%
-                    width: 40%
-                    display: flex
-                    justify-content: space-around
-                    &__icon
-                        max-width: 7vw
-                        max-height: 12vh
-                        margin: 0.5%
-                    p
-                        width: 40%
-                        align-self: center
-                        font-size: 120%
-            &__end
-                font-size: 150%
-                display: flex
-                justify-content: center
-                width: 100%
-                margin-top: 3%
+            align-items: center
