--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -4,11 +4,11 @@
         overflow-x: auto
         display: flex
         flex-direction: column
-        top: 12vh
+        top: 15vh
         left: 2vw
         z-index: 100
         width: 95vw
-        height: 87%
+        height: 100%
         justify-content: space-around
         align-items: center
         font-size: 105%
@@ -16,11 +16,11 @@
     @media only screen and (min-width: 1024px)
         position: absolute
         overflow: auto
-        top: 11.5vh
+        top: 15vh
         left: 2vw
         z-index: 100
         width: 95%
-        height: 88%
+        height: 100%
         display: flex
         flex-direction: column
         justify-content: space-around
@@ -33,10 +33,10 @@
         background-color: #e5eaf0
         border: 2px solid steelblue
         cursor: pointer
+
         &__item-container1
             height: 15vh
-            width: 90vw
-            border: 3px solid black
+            width: 95vw
             cursor: pointer
             background: url("/img/time2padel-bg.jpg")
             background-repeat: no-repeat
@@ -46,7 +46,7 @@
             display: flex
             justify-content: center
             align-items: center
-            -webkit-text-stroke: 2px black
+            -webkit-text-stroke: 0.2px black
             color: #f4e32d
             font-family: 'Baloo Bhai'
             font-size: 200%
@@ -57,8 +57,7 @@
 
         &__item-container2
             height: 15vh
-            width: 90vw
-            border: 3px solid black
+            width: 95vw
             cursor: pointer
             background: url("/img/beer-bg.jpg")
             background-repeat: no-repeat
@@ -68,7 +67,7 @@
             display: flex
             justify-content: center
             align-items: center
-            -webkit-text-stroke: 2px black
+            -webkit-text-stroke: 0.2px black
             color: #eca114
             font-family: 'Baloo Bhai'
             font-size: 200%
@@ -79,8 +78,7 @@
 
         &__item-container3
             height: 15vh
-            width: 90vw
-            border: 3px solid black
+            width: 95vw
             cursor: pointer
             background: url("/img/portfolio-bg.jpg")
             background-repeat: no-repeat
@@ -90,7 +88,7 @@
             display: flex
             justify-content: center
             align-items: center
-            -webkit-text-stroke: 2px black
+            -webkit-text-stroke: 0.2px black
             color: #1f77b9
             font-family: 'Baloo Bhai'
             font-size: 200%
@@ -101,8 +99,7 @@
 
         &__item-container4
             height: 15vh
-            width: 90vw
-            border: 3px solid black
+            width: 95vw
             cursor: pointer
             background: url("/img/gnomeworld-bg.png")
             background-repeat: no-repeat
@@ -112,7 +109,7 @@
             display: flex
             justify-content: center
             align-items: center
-            -webkit-text-stroke: 2px black
+            -webkit-text-stroke: 0.2px black
             color: #1ee9f0
             font-family: 'Baloo Bhai'
             font-size: 200%
@@ -123,8 +120,7 @@
 
         &__item-container5
             height: 15vh
-            width: 90vw
-            border: 3px solid black
+            width: 95vw
             cursor: pointer
             background: url("/img/gnomeworld-bg.png")
             background-repeat: no-repeat
@@ -134,8 +130,29 @@
             display: flex
             justify-content: center
             align-items: center
-            -webkit-text-stroke: 2px black
+            -webkit-text-stroke: 0.2px black
             color: #aa0294
+            font-family: 'Baloo Bhai'
+            font-size: 200%
+            text-decoration: none
+            &:hover
+                cursor: pointer
+                transform: scale(1.1) perspective(1px)
+
+        &__item-container6
+            height: 15vh
+            width: 95vw
+            cursor: pointer
+            background: url("/img/adevinta-bg.png")
+            background-repeat: no-repeat
+            background-size: cover
+        &__item6
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            -webkit-text-stroke: 0.2px black
+            color: #b1646a
             font-family: 'Baloo Bhai'
             font-size: 200%
             text-decoration: none
