modified some styles from aboutme and projects compos

--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -41,6 +41,8 @@
             background: url("/img/time2padel-bg.jpg")
             background-repeat: no-repeat
             background-size: cover
+            @media only screen and (max-width: 1023px)
+                height: 12vh
         &__item1
             height: 100%
             display: flex
@@ -62,6 +64,8 @@
             background: url("/img/beer-bg.jpg")
             background-repeat: no-repeat
             background-size: cover
+            @media only screen and (max-width: 1023px)
+                height: 12vh
         &__item2
             height: 100%
             display: flex
@@ -83,6 +87,8 @@
             background: url("/img/portfolio-bg.jpg")
             background-repeat: no-repeat
             background-size: cover
+            @media only screen and (max-width: 1023px)
+                height: 12vh
         &__item3
             height: 100%
             display: flex
@@ -104,6 +110,8 @@
             background: url("/img/gnomeworld-bg.png")
             background-repeat: no-repeat
             background-size: cover
+            @media only screen and (max-width: 1023px)
+                height: 12vh
         &__item4
             height: 100%
             display: flex
@@ -125,6 +133,8 @@
             background: url("/img/gnomeworld-bg.png")
             background-repeat: no-repeat
             background-size: cover
+            @media only screen and (max-width: 1023px)
+                height: 12vh
         &__item5
             height: 100%
             display: flex
@@ -146,6 +156,8 @@
             background: url("/img/adevinta-bg.png")
             background-repeat: no-repeat
             background-size: cover
+            @media only screen and (max-width: 1023px)
+                height: 12vh
         &__item6
             height: 100%
             display: flex
