--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -42,7 +42,7 @@
                     margin-top: 5%
                     border: solid 1px
                     border-radius: 2rem
-                    height: 45%
+                    height: 50%
                     background-color: whitesmoke
                 h4
                     font-size: 200%
@@ -83,6 +83,7 @@
                         height: 6vh
                         font-size: 90%
                         border-radius: 1rem
+                        margin-bottom: 4%
                     &:hover
                         cursor: pointer
                         transform: scale(1.1) perspective(1px)
