projects modified to have 2 links, one to the webpage and another to the code in github

--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -14,7 +14,7 @@
         font-size: 175%
     .nav-menu
         &__item
-            font-family: 'Baloo Bhai'
+            font-family: 'Acme', sans-serif
             font-size: 80%
             color: whitesmoke
             margin-left: 3%
