--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -34,14 +34,15 @@
             &__title
                 @media only screen and (max-width: 1023px)
                     font-size: 130%
-                    font-family: 'Baloo Bhai'
+                    font-family: 'Acme', sans-serif
                     display: flex
                     justify-content: center
                     padding: 1%
                 @media only screen and (min-width: 1024px)
                     font-size: 180%
-                    font-family: 'Baloo Bhai'
+                    font-family: 'Acme', sans-serif
                     color: black
+                    margin-top: -1%
             &__text
                 @media only screen and (max-width: 1023px)
                     font-size: 60%
@@ -49,5 +50,6 @@
                     margin-top: -1%
                     padding: 1%
                 @media only screen and (min-width: 1024px)
-                    letter-spacing: 1.5px
                     line-height: 25px
+                    
+                    
