--- a/my-website-app/src/components/Adevinta-vanilla/index.sass
+++ b/my-website-app/src/components/Adevinta-vanilla/index.sass
@@ -11,8 +11,7 @@
         position: absolute
         display: flex
         flex-direction: column
-        align-content: center
-        top: 12vh
+        top: 13.5vh
         left: 5vw
         width: 90vw
         height: 88vh
@@ -51,8 +50,6 @@
                     height: 44vh
                     align-self: center
                     margin-bottom: 2%
-        &__text
-            margin-top: 2%
         &__project-info
             @media only screen and (max-width: 1023px)
                 width: 100%
@@ -62,7 +59,7 @@
                 justify-content: flex-start
                 flex-direction: column
                 align-self: center
-                margin-top: 0.5%
+                margin-top: -3.5%
                 line-height: 17px
                 font-size: 70%
             @media only screen and (min-width: 1024px)
@@ -73,15 +70,17 @@
                 justify-content: center
                 flex-direction: column
                 align-self: center
-                margin-top: 0.5%
+                margin-top: -1%
                 letter-spacing: 1px
                 line-height: 22px
                 font-size: 80%
             h3
+                color: black
                 @media only screen and (max-width: 1023px)
                     margin-top: 3.5%
                     font-size: 160%
                     font-family: 'Baloo Bhai'
+                    margin-bottom: 2%
                 @media only screen and (min-width: 1024px)
                     margin-top: 0.5%
                     font-size: 120%
@@ -100,11 +99,11 @@
                 display: flex
                 flex-direction: row
                 align-items: center
-                p 
-                    @media only screen and (max-width: 1023px)
-                        width: 42%
-                    @media only screen and (min-width: 1024px)
-                        width: 20%
+        &__message    
+            @media only screen and (max-width: 1023px)
+                width: 68%
+            @media only screen and (min-width: 1024px)
+                width: 54%
         &__container
             width: 10%    
             margin-left: 3% 
@@ -113,11 +112,11 @@
             max-height: 12vh
             margin: 0.5%
             @media only screen and (max-width: 1023px)
-                width: 60%
+                width: 90%
                 margin-left: 20%
             @media only screen and (min-width: 1024px)
                 width: 30%  
-                margin-left: -20%
+                margin-left: -35%
             &:hover
                 cursor: pointer
-                transform: scale(1.3) perspective(1px)
+                transform: scale(1.2) perspective(1px)
