--- a/my-website-app/src/components/Gnomes-redux/index.sass
+++ b/my-website-app/src/components/Gnomes-redux/index.sass
@@ -49,8 +49,6 @@
                     width: 16vw
                     height: 34vh
                     align-self: center
-        &__text
-            margin-top: 2%
         &__project-info
             @media only screen and (max-width: 1023px)
                 width: 100%
@@ -76,15 +74,18 @@
                 line-height: 22px
                 font-size: 80%
             h3
+                color: black
                 @media only screen and (max-width: 1023px)
-                    margin-top: 3.5%
+                    margin-top: 0.5%
                     font-size: 160%
                     font-family: 'Baloo Bhai'
+                    margin-bottom: 2%
                 @media only screen and (min-width: 1024px)
-                    margin-top: 0.5%
+                    margin-top: -4.5%
                     font-size: 120%
                     font-family: 'Baloo Bhai'
-
+               
+                    
         &__direct-access
             @media only screen and (max-width: 1023px)
                 width: 100%
@@ -98,26 +99,24 @@
                 display: flex
                 flex-direction: row
                 align-items: center
-                p 
-                    @media only screen and (max-width: 1023px)
-                        width: 42%
-                    @media only screen and (min-width: 1024px)
-                        width: 20%
+        &__message    
+            @media only screen and (max-width: 1023px)
+                width: 68%
+            @media only screen and (min-width: 1024px)
+                width: 54%
         &__container
-            width: 10%    
-            margin-left: 3% 
+            width: 10% 
+            margin-left: 3%   
         &__icon
             max-width: 10vw
             max-height: 12vh
             margin: 0.5%
             @media only screen and (max-width: 1023px)
-                width: 60%
+                width: 90%
                 margin-left: 20%
             @media only screen and (min-width: 1024px)
-                width: 30%  
-                margin-left: -20%
+                width: 30%
+                margin-left: -35%
             &:hover
                 cursor: pointer
-                transform: scale(1.3) perspective(1px)
-
-
+                transform: scale(1.2) perspective(1px)
