--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -45,22 +45,23 @@
                     height: 50%
                     background-color: whitesmoke
                 h4
-                    font-size: 200%
+                    font-size: 230%
                     display: flex
                     justify-content: flex-start
                     align-self: center
-                    margin-bottom: 2%
+                    font-family: 'Acme', sans-serif
+                    width: 90%
                     @media only screen and (max-width: 1023px)
                         font-size: 130%
                         justify-content: center
-                        margin-bottom: 3%
+                        margin-bottom: 7%
                 h5
                     font-size: 110%
                     display: flex
                     justify-content: flex-start
                     align-self: center
                     width: 80%
-                    margin-top: 2%
+                    margin-top: 1%
                     @media only screen and (max-width: 1023px)
                         font-size: 80%
                         margin-bottom: 5%
@@ -69,14 +70,15 @@
                         justify-content: center
 
                 &__button
-                    width: 30%
+                    width: 25%
                     height: 8vh
                     background: dodgerblue
-                    margin-top: 4%
+                    margin-top: 2.5%
                     font-size: 120%
                     border-radius: 1rem
                     border: solid 1px #005c99
                     color: whitesmoke
+                    font-family: 'Acme', sans-serif
                     @media only screen and (max-width: 1023px)
                         margin-top: 1%
                         width: 55%
@@ -91,14 +93,14 @@
         display: flex
         justify-content: flex-start
         width: 100%
-        font-family: 'Baloo Bhai'
+        font-family: 'Acme', sans-serif
         color: dodgerblue
         @media only screen and (max-width: 1023px)
             font-size: 200%
             justify-content: center
-            margin-top: 4%
+            margin-top: 9%
         @media only screen and (min-width: 1024px)
-            font-size: 500%
+            font-size: 630%
 
     .contact
         display: flex
