--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -1,12 +1,18 @@
 .bolder
     font-weight: 900
     font-size: 115%
+    
 .about-me
     position: relative
     top: 13vh
     width: 100vw
+    height: 88vh
+    background: url("/img/bg-5.JPG")
+    background-repeat: no-repeat
+    background-size: cover
     @media only screen and (max-width: 1023px)
-        top: 15vh
+        top: 8vh
+        height: 93vh
     .welcome
         display: flex
         @media only screen and (max-width: 1023px)
@@ -16,21 +22,33 @@
         @media only screen and (min-width: 1024px)
             flex-direction: row
         &__image
+            border: 1px solid 
+            background-color: whitesmoke
             @media only screen and (max-width: 1023px)
-                height: 200px
+                height: 180px
                 object-fit: contain
                 border-radius: 1rem
-                margin-top: 2%
+                margin-top: 4%
             @media only screen and (min-width: 1024px)
-                min-width: 35vw
-                max-height: 87vh
+                min-width: 30vw
+                max-height: 80vh
                 border-radius: 3rem
-                padding: 2%
+                margin-left: 1.5%
+                margin-top: 2%
         .info
-            width: 100%
-            padding: 3%
+            width: 62%
+            height: 80vh
+            padding: 2%
             align-self: flex-start
+            border: solid 1px
+            border-radius: 2rem
             letter-spacing: 1px
+            margin-top: 3%
+            margin-left: 2%
+            background-color: whitesmoke
+            @media only screen and (max-width: 1023px)
+                width: 95%
+                height: 59vh
             &__title
                 @media only screen and (max-width: 1023px)
                     font-size: 130%
@@ -45,11 +63,10 @@
                     margin-top: -1%
             &__text
                 @media only screen and (max-width: 1023px)
-                    font-size: 60%
-                    line-height: 15px
-                    margin-top: -1%
+                    font-size: 53%
+                    line-height: 14px
+                    margin-top: -4%
                     padding: 1%
                 @media only screen and (min-width: 1024px)
                     line-height: 25px
-                    
-                    
+                    font-size: 80%
