--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -6,17 +6,23 @@
     display: flex
     justify-content: space-around
     align-items: center
-    background-color: dodgerblue
+    background: url(/img/bg-5.JPG)
+    background-repeat: no-repeat
+    background-size: cover
+    background-position-y: top
+    background-position-x: right
+    //background-color: dodgerblue
     font-weight: bold
     @media only screen and (max-width: 1023px)
         font-size: 100%
+        height: 8vh
     @media only screen and (min-width: 1024px)
         font-size: 175%
     .nav-menu
         &__item
             font-family: 'Acme', sans-serif
             font-size: 80%
-            color: whitesmoke
+            color: black
             margin-left: 3%
             @media only screen and (min-width: 1024px)
                 font-size: 100%
