--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -8,75 +8,48 @@
         display: flex
         justify-content: space-evenly
         @media only screen and (max-width: 1023px)
-            height: 87%
+            height: 93%
             flex-direction: column
-            background: url(/img/main-bg.jpg)
+            background: url(/img/bg-5.JPG)
             background-repeat: no-repeat
             background-size: cover
             background-position-y: top
-            background-position-x: right
+            background-position-x: left
             align-items: center
+            top: 8vh
         @media only screen and (min-width: 1024px)
             height: 87%
-            background: url("/img/main-bg.jpg")
+            background: url("/img/bg-5.JPG")
             background-repeat: no-repeat
             background-size: cover
             align-items: center
         .container
             display: flex
+            justify-content: center
             width: 90%
             height: 100%
             @media only screen and (max-width: 1023px)
-                height: 80%
+                margin-top: 6%
             .titles
                 display: flex
                 flex-wrap: wrap
-                justify-content: flex-start
-                align-self: center
-                width: 70%
-                height: 40%
+                justify-content: center
+                align-self: flex-start
+                width: 100%
+                height: 25%
+                margin-top: 3%
                 @media only screen and (max-width: 1023px)
                     width: 100%
-                    margin-bottom: 10%
                     justify-content: center
-                    margin-top: 5%
-                    border: solid 1px
-                    border-radius: 2rem
-                    height: 50%
-                    background-color: whitesmoke
-                h4
-                    font-size: 230%
-                    display: flex
-                    justify-content: flex-start
-                    align-self: center
-                    font-family: 'Acme', sans-serif
-                    width: 90%
-                    @media only screen and (max-width: 1023px)
-                        font-size: 130%
-                        justify-content: center
-                        margin-bottom: 7%
-                h5
-                    font-size: 110%
-                    display: flex
-                    justify-content: flex-start
-                    align-self: center
-                    width: 80%
-                    margin-top: 1%
-                    @media only screen and (max-width: 1023px)
-                        font-size: 80%
-                        margin-bottom: 5%
-                        text-align: center
-                        width: 100%
-                        justify-content: center
-
+                    margin-top: -2%
+                    height: 30%
                 &__button
-                    width: 25%
-                    height: 8vh
-                    background: dodgerblue
-                    margin-top: 2.5%
-                    font-size: 120%
-                    border-radius: 1rem
-                    border: solid 1px #005c99
+                    width: 20%
+                    height: 10vh
+                    background: goldenrod
+                    font-size: 150%
+                    border-radius: 1.5rem
+                    box-shadow: 5px 5px 15px black
                     color: whitesmoke
                     font-family: 'Acme', sans-serif
                     @media only screen and (max-width: 1023px)
@@ -86,21 +59,50 @@
                         font-size: 90%
                         border-radius: 1rem
                         margin-bottom: 4%
+                        margin-top: -7%
                     &:hover
                         cursor: pointer
                         transform: scale(1.1) perspective(1px)
+
     h2
         display: flex
-        justify-content: flex-start
+        justify-content: center
         width: 100%
         font-family: 'Acme', sans-serif
-        color: dodgerblue
+        color: goldenrod
+        // -webkit-text-stroke: 0.1px black
         @media only screen and (max-width: 1023px)
-            font-size: 200%
+            font-size: 130%
             justify-content: center
-            margin-top: 9%
+            margin-top: 13%
         @media only screen and (min-width: 1024px)
-            font-size: 630%
+            font-size: 400%
+            margin-top: -1%
+    h4
+        font-size: 200%
+        display: flex
+        justify-content: center
+        align-self: center
+        font-family: 'Acme', sans-serif
+        width: 90%
+        margin-bottom: 1%
+        @media only screen and (max-width: 1023px)
+            font-size: 130%
+            justify-content: center
+            margin-bottom: 7%
+    h5
+        font-size: 110%
+        display: flex
+        justify-content: center
+        align-self: center
+        width: 90%
+        margin-top: 1%
+        @media only screen and (max-width: 1023px)
+            font-size: 80%
+            margin-bottom: 5%
+            text-align: center
+            width: 100%
+            justify-content: center
 
     .contact
         display: flex
