modified urls of the projects and some styles

--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -71,3 +71,6 @@
                 @media only screen and (min-width: 1024px)
                     line-height: 25px
                     font-size: 80%
+                @media only screen and (min-width: 1400px)
+                    line-height: 35px
+                    font-size: 115%
