--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -43,6 +43,8 @@
             align-items: center
             font-size: 175%
             font-weight: bold
+        @media only screen and (min-width: 1400px)
+            font-size: 215%
         .nav-menu
             &__item-container1
                 grid-area: padel
