--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -27,6 +27,8 @@
             @media only screen and (min-width: 1024px)
                 font-size: 100%
                 margin-left: 5%
+            @media only screen and (min-width: 1400px)
+                font-size: 130%
             &:hover
                 cursor: pointer
                 transform: scale(1.1) perspective(1px)
