--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -47,7 +47,7 @@
                     width: 17%
                     height: 8vh
                     background: goldenrod
-                    font-size: 150%
+                    font-size: 130%
                     border-radius: 1.5rem
                     box-shadow: 5px 5px 15px black
                     color: whitesmoke
@@ -60,6 +60,8 @@
                         border-radius: 1rem
                         margin-bottom: 4%
                         margin-top: -7%
+                    @media only screen and (min-width: 1400px)
+                        font-size: 170%
                     &:hover
                         cursor: pointer
                         transform: scale(1.1) perspective(1px)
