--- a/my-website-app/src/components/Personal-website/index.sass
+++ b/my-website-app/src/components/Personal-website/index.sass
@@ -70,10 +70,12 @@
                 justify-content: center
                 flex-direction: column
                 align-self: center
-                margin-top: -1%
+                margin-top: -1.5%
                 letter-spacing: 1px
                 line-height: 22px
                 font-size: 80%
+            @media only screen and (min-width: 1400px)
+                margin-top: -3.5%
             h3
                 color: black
                 @media only screen and (max-width: 1023px)
@@ -118,6 +120,9 @@
             @media only screen and (min-width: 1024px)
                 width: 30%  
                 margin-left: -35%
+            @media only screen and (min-width: 1400px)
+                width: 23%  
+                margin-left: -212%
             &:hover
                 cursor: pointer
                 transform: scale(1.2) perspective(1px)
