--- a/my-website-app/src/components/Time2Padel/index.sass
+++ b/my-website-app/src/components/Time2Padel/index.sass
@@ -74,6 +74,8 @@
                 letter-spacing: 1px
                 line-height: 22px
                 font-size: 80%
+            @media only screen and (min-width: 1400px)
+                margin-top: -4.5%
             h3
                 color: black
                 @media only screen and (max-width: 1023px)
@@ -82,7 +84,6 @@
                     font-family: 'Baloo Bhai'
                     margin-bottom: 2%
                 @media only screen and (min-width: 1024px)
-                    margin-top: 0.5%
                     font-size: 120%
                     font-family: 'Baloo Bhai'
 
@@ -117,6 +118,9 @@
             @media only screen and (min-width: 1024px)
                 width: 30%  
                 margin-left: -35%
+            @media only screen and (min-width: 1400px)
+                width: 23%  
+                margin-left: -212%
             &:hover
                 cursor: pointer
                 transform: scale(1.2) perspective(1px)
