modifications in the styles

--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -56,13 +56,13 @@
         justify-content: center
         width: 100%
         font-family: 'Acme', sans-serif
-        color: goldenrod
+        color: black
         @media only screen and (max-width: 1023px)
             font-size: 250%
             justify-content: center
             margin-top: 11%
         @media only screen and (min-width: 1024px)
-            font-size: 560%
+            font-size: 450%
             margin-top: -5%
     h4
         font-size: 200%
@@ -113,11 +113,20 @@
     justify-content: center
     width: 100%
     font-size: 200%
-    margin-top: 1.5rem
-    margin-bottom: 1.5rem
+    margin: 1rem
+    margin-top: -1%
+    align-items: center
     @media only screen and (max-width: 1023px)
         font-size: 90%
         margin-top: 1rem
         margin-bottom: 3rem
     &__wrapper
-        font-family: 'Acme', sans-serif
+        color: black
+
+.span
+    color: goldenrod
+    font-family: 'Acme', sans-serif
+    margin-left: 1%
+    @media only screen and (max-width: 1023px)
+        margin-left: 3%
+    
