--- a/my-website-app/src/components/App/index.sass
+++ b/my-website-app/src/components/App/index.sass
@@ -15,4 +15,8 @@ body
     height: 100vh
     width: 100vw
     background-color: #fafafa
-    
+    // background-image: url("/img/bg-7.JPG")
+    // background-size: 100vw 100vh;
+    // background-position: top center;
+    // background-repeat: no-repeat
+    // background-attachment: fixed
